# qtshadowcache

./: CMakeLists.txt
output/: includeme.cmake  makeme.cmake
src/: qtshadowcache.cpp  qtshadowcache.h  qtshadowcache_global.h
